# aeon-rs

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.toml  rustfmt.toml
src/: client.rs  config.rs  constants.rs  functions.rs  macros.rs  main.rs  structs.rs  traits.rs
src/commands/: gaming.rs  general.rs  mod.rs  utils.rs
src/commands/gaming/: mod.rs  steam.rs
src/commands/general/: heliohost.rs  mod.rs  source.rs  status.rs
src/commands/search/: anison.rs  distro.rs  distrowatch.rs  help.rs  jisho.rs  lyricfind.rs  lyrics.rs  mod.rs  novel_updates.rs  stock.rs  time.rs  ufret.rs  youtube.rs
src/commands/utility/: calculate.rs  code.rs  code_legacy.rs  convert_currency.rs  define.rs  delete_response_context.rs  dns.rs  edited.rs  eval.rs  google_translate_context.rs  google_translate_message.rs  inspect_message.rs  ip.rs  latex.rs  mod.rs  ocr.rs  purge.rs  remind_message.rs  reminder_set_context.rs  reminder_set_message.rs  sauce.rs  snipe_message_reactions.rs  snipe_reaction_context.rs  snipe_reaction_message.rs  snowflake.rs  translate.rs  translate_message.rs  unicode_context.rs  unicode_list_context.rs  unicode_message.rs  voice_message.rs  voice_message_context.rs
src/commands/utils/: code.rs  convert_currency.rs  dns.rs  heliohost.rs  ip.rs  mod.rs  remind.rs  remind_message.rs  sauce.rs  snipe.rs  snipe_message_reactions.rs  timeout.rs  translate.rs  translate_message.rs  unicode.rs  unicode_message.rs
src/message_commands/: mod.rs
src/message_commands/search/: jisho.rs  mod.rs
src/message_commands/utility/: convert_currency.rs  mod.rs  ping.rs  translate.rs
src/statics/: anilist.rs  colors.rs  currencies.rs  dns_codes.rs  duration.rs  emojis.rs  exchange_rate.rs  google.rs  google_translate_languages.rs  mod.rs  regex.rs  spotify.rs  steam.rs  tio.rs  tio_programming_languages.rs  unicode.rs  vndb.rs
src/statics/emojis/: mod.rs  windows.rs
src/structs/: cache.rs  client.rs  command.rs  command_args.rs  command_context.rs  component_interaction.rs  components_v2.rs  config.rs  distrowatch.rs  duration.rs  emoji_manager.rs  exchange_rate.rs  google_dns.rs  google_translate.rs  interaction.rs  ip_info.rs  mod.rs  reminders.rs  restricted_interaction.rs  saucenao.rs  select_menu.rs  simple_message.rs  snipe.rs  snipes.rs  snowflake.rs  stock.rs  stringified_message.rs  tags.rs  unicode.rs
src/structs/api/: dictionary.rs  exchange_rate.rs  google_dns.rs  google_translate.rs  ip_info.rs  ipgeolocation.rs  jisho.rs  latex.rs  localdown.rs  lyricfind.rs  mod.rs  oauth.rs  saucenao.rs  tio.rs  urban_dictionary.rs  virtualearth.rs  voice_message.rs
src/structs/commands/: google_translate.rs  mod.rs  unicode.rs
src/structs/database/: guilds.rs  mod.rs  oauth.rs  redis.rs  reminders.rs  tags.rs
src/structs/duration/: mod.rs  statics.rs
src/structs/gateway/: cache.rs  client.rs  mod.rs  song_activity.rs
(+278 files in other folders)
