[package]
name = "aeon-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
chromiumoxide = { git = "https://github.com/caido/dependency-chromiumoxide.git", rev = "3e5dcdc", default-features = false, features = ["tokio-runtime"] }
flate2 = "1"
futures = "0.3"
gouth = "0.2"
http_req = "0.13"
image = "0.24"
mathjax = { version = "0.1", default-features = false, features = ["node", "image"] }
mongodb = "3"
nipper = "0.1"
parse_duration = "2.1"
prost = "0.13"
regex = "1"
reqwest = { version = "0.12" }
rust_socketio = { version = "0.6", features = ["async"] }
serde = "1"
serde_json = "1"
serde_repr = "0.1"
serde_with = "3"
slashook = { git = "https://github.com/tonkku107/slashook.git", rev = "b222e86" }
sysinfo = "0.33"
tokio = "1"
toml = "0.8"
tonic = { version = "0.12", features = ["tls"] }
totp-rs = "5"
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-model = "0.16"
unicode_names2 = "1.3"

[build-dependencies]
tonic-build = "0.12"
