[package]
name = "aeon-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
futures = "0.3"
gouth = "0.2"
headless_chrome = "1"
http_req = "0.14"
image = "0.24"
mathjax = { version = "0.1", default-features = false, features = ["node", "image"] }
mongodb = "3"
nipper = "0.1"
parse_duration = "2.1"
prost = "0.14"
redis = { version = "1", features = ["tokio-comp"] }
regex = "1"
reqwest = { version = "0.13", features = ["form", "json", "query"] }
serde = "1"
serde_json = "1"
serde_repr = "0.1"
serde_with = "3"
similar = "2.7"
slashook = { git = "https://github.com/tonkku107/slashook.git", rev = "65fc62f" }
sysinfo = "0.38"
tokio = "1"
toml = "0.9"
tonic = { version = "0.14", features = ["tls-native-roots"] }
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-model = "0.17"
unicode_names2 = "2"

[build-dependencies]
tonic-prost-build = "0.14"
